# open-data

./: .env  .gitignore  AI_CONTEXT.md  CLAUDE.md  DEVELOPMENT.md  Gemfile  README.md  docker-compose.github-actions.yml  docker-compose.slim.yml  edge_cases.md  jurisdictions.json  mise.toml  progress.json  pyproject.toml  schemas.py  sync.sh  updated_jurisdiction_ocdids.txt
.github/ISSUE_TEMPLATE/: jurisdiction_issue.md
.github/archive/: data_scrape.yml  data_scrape_by_population.yml
.github/workflows/: city_scrape.yml  crudder_od_sync.yml  data_intake.yml  data_scrape.yml  data_scrape_by_population.yml  post_merge.yml  post_merge_jurisdiction_data.yml  post_merge_jurisdiction_entry.yml  post_merge_people.yml  post_merge_process_files.yml  post_merge_process_images.yml  post_merge_progress_update.yml  post_pull_reqest.yml  post_pull_request.yml  pull_request_updated.yml  sync-from-civicpatch.yml  to_delete_sync-from-civicpatch.yml  yy_data_intake.yml  zz_process_pull_request.yml
data/ca/: place_anaheim.yml  place_antioch.yml  (+71 more)
ocdid_progress_tracker/: generate_readme.py  main.py
scripts/: count_jurisdictions.py  create_update_jurisdictions_metadata_file.py  create_update_progress_file.py  fix_jurisdiction_ocdids.py  generate_pmtiles.py  pull_jurisdiction_data.py  setup_counties.py  setup_local.py  setup_maps.py  setup_state.py  setup_states.py  state_configs.py  utils.py  validate_jurisdiction.py
tests/: test_compare.py  test_generate_pmtiles.py  test_scrapers.py  test_setup_counties.py  test_setup_local.py  test_setup_states.py  test_wikipedia_utils.py
(+42769 files in other folders)
