[project]
name = "open-data"
version = "0.1.0"
description = ""
authors = [
    {name = "michelle",email = "michelle@civicpatch.org"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic (>=2.12.2,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
