[project]
name = "open-data"
version = "0.1.0"
description = ""
authors = [
    {name = "michelle",email = "michelle@civicpatch.org"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyyaml (>=6.0.3,<7.0.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "phonenumbers (>=9.0.16,<10.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "python-lsp-server[all] (>=1.13.1,<2.0.0)",
    "geopandas (>=1.1.1,<2.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "boto3 (>=1.42.43,<2.0.0)",
    "ijson (>=3.4.0.post0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
